@@ -1,0 +1,20 @@
+<?php
+
+#	IMDB Libraries
+require_once 'imdbphp/Psr/Log/LoggerInterface.php';
+require_once 'imdbphp/Psr/SimpleCache/CacheInterface.php';
+require_once 'imdbphp/Imdb/Exception.php';
+require_once 'imdbphp/Imdb/Exception/Http.php';
+require_once 'imdbphp/Imdb/Config.php';
+require_once 'imdbphp/Imdb/Logger.php';
+require_once 'imdbphp/Imdb/Cache.php';
+require_once 'imdbphp/Imdb/Request.php';
+require_once 'imdbphp/Imdb/Pages.php';
+require_once 'imdbphp/Imdb/MdbBase.php';
+require_once 'imdbphp/Imdb/Charts.php';
+require_once 'imdbphp/Imdb/Parsing.php';
+require_once 'imdbphp/Imdb/Person.php';
+require_once 'imdbphp/Imdb/PersonSearch.php';
+require_once 'imdbphp/Imdb/Title.php';
+require_once 'imdbphp/Imdb/TitleSearch.php';
+require_once 'imdbphp/Imdb/TitleSearchAdvanced.php';
