@@ -98,6 +98,8 @@ table.table_ninety{margin-left:auto;margin-right:auto;width:90%;}
 .picfloat{float:left;padding-right:5px;}
 
 .imdblt_double_container, .lumiere_flex_container{display:flex;flex-wrap:wrap;}
+.lumiere_display_flex{display:flex;}
+.lumiere_display_inline_flex{display:inline-flex;}
 .imdblt_double_container_content, .lumiere_flex_container_content{flex:50%;}
 .imdblt_flex_auto, .lumiere_flex_auto{flex:auto;}
 .imdblt_double_container_content_twenty, .lumiere_flex_container_content_twenty{flex:20%;}
@@ -105,10 +107,9 @@ table.table_ninety{margin-left:auto;margin-right:auto;width:90%;}
 .imdblt_double_container_content_fourtyfive, .lumiere_flex_container_content_fourtyfive {flex:45%;}
 .imdblt_double_container_content_seventy, .lumiere_flex_container_content_seventy{flex:70%;}
 .imdblt_double_container_content_eighty,.lumiere_flex_container_content_eighty{flex:80%;}
-
 .imdblt_hidden{visibility:hidden;}
 .imdblt_padding_five, .lumiere_padding_five{padding:5px;}
-.imdblt_padding_ten{padding:10px;}
+.imdblt_padding_ten, .lumiere_padding_ten{padding:10px;}
 .imdblt_padding_left{padding-left:50px;}
 .imdblt_padding_top_twenty{padding-top:20px;}
 .imdblt_padding_twenty{padding-bottom:20px;}
@@ -119,6 +120,8 @@ table.table_ninety{margin-left:auto;margin-right:auto;width:90%;}
 .imdblt_align_center, .lumiere_align_center{text-align:center;}
 .imdblt_align_webkit_center{text-align: -webkit-center;}
 .imdblt_align_bottom{vertical-align:bottom;}
+
+.lumiere_valign_middle{vertical-align: middle;}
 .lumiere_align_items_center{align-items:center;}
 .imdblt_align_last_center{text-align-last:center;}
 .imdblt_float_right{float:right;}
@@ -140,6 +143,3 @@ position: -webkit-sticky; position: sticky; bottom: 0;  z-index: 10;}
 .lumiere_sticky_white{ background-color: white;}
 .lumiere_sticky_boxshadow{ background-color: white;box-shadow: 1px 1px 10px 1px #ddd;}
 
-
-
-10%
